<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="no.martinpedersen.valutakalkulator.MainActivity">

    <TextView
        android:id="@+id/errorMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"/>

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"/>

    <TextView
        android:id="@+id/vTekst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/V_tekst"
        android:textSize="20sp"
        android:paddingTop="30dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/eTekst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/E_tekst"
        android:maxLength="11"
        android:textSize="20sp"
        android:paddingTop="70dp"
        android:inputType="numberDecimal"
        android:layout_centerHorizontal="true" />


        <RelativeLayout
            android:paddingTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/eTekst" >


 <!--           <Button
                android:id="@+id/button1"
                android:text="@string/NE"
                android:onClick="nokToEur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button2"
                android:text="@string/EN"
                android:onClick="eurToNok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"/>

-->
            <Button
                android:id="@+id/button3"
                android:text="@string/veksle"
                android:onClick="veksle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"/>


            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/button1"
                android:paddingTop="10dp">

                <RadioButton
                    android:id="@+id/rNE"
                    android:text="@string/NE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/rEN"
                    android:text="@string/EN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />                   />

            </RadioGroup>


        </RelativeLayout>

</RelativeLayout>
